# adv_mla_lab_4

./: Dockerfile  Setup_Steps.ipynb  app.py  pyproject.toml  requirements.txt
app/: Dockerfile  main.py  requirements.txt
