[tool.poetry]
name = "lab4-app"
version = "0.1.0"
description = "for api endpoints"
authors = ["Ray <your_email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas="2.2.2"
scikit-learn="1.5.1"
jupyterlab="4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
